src/objects/SFDC_Service_Timecard__c.object
<CustomObject>
    <description>Log the amount of hours worked on a particular service trip. You can track the type of service that you performed, the date of service, and add notes as needed. Each Service Timecard should be associated with the relevant Contract, by the customer&apos;s service Contract number. 

If your company also uses the Supportforce application, you may associate Service Timecards with particular Cases that were logged requesting a Service Visit.</description>
    <fields>
        <fullName>Approved_by_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved by Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>R00N50000001WO7TEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>R00N50000001WO7UEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Service__c</fullName>
        <label>Date of  Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours_Worked__c</fullName>
        <label>Hours Worked</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Notes__c</fullName>
        <label>Service Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Performed__c</fullName>
        <label>Service Performed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Maintenance - Emergency Repair</fullName>
                </value>
                <value>
                    <fullName>Maintenance - Routine</fullName>
                </value>
                <value>
                    <fullName>Other - Specify in Notes</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Technician</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N50000001WO7VEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Timecard</label>
    <listViews>
        <fullName>AllServiceTimecards</fullName>
        <columns>NAME</columns>
        <columns>Contract__c</columns>
        <columns>Date_of_Service__c</columns>
        <columns>Hours_Worked__c</columns>
        <columns>Approved_by_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Timecards</label>
    </listViews>
    <nameField>
        <displayFormat>SVC-{0000000}</displayFormat>
        <label>Service Timecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Timecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>